[package]
name = "crater"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]

# The web server, serves API calls via JSON, possibly HTML, and
# possibly coordinates the job engine.
[[bin]]
name = "crater-web"
path = "crater-web/main.rs"

# The user interface
[[bin]]
name = "crater-cli"
path = "crater-cli/main.rs"

# Dependencies for the above two.
# FIXME: I'd rather not mix the deps for them so that crater-cli can
# be built without building iron.
[dependencies]
iron = "*"
router = "*"
mount = "*"
log = "*"
env_logger = "*"
rustc-serialize = "*"

# Coordinates builds into crater jobs
[dependencies.crater-engine]
path = "crater-engine"

# Abstracts the AMQP implementation
[dependencies.crater-msgbus]
path = "crater-msgbus"

# Abstracts the PostgreSQL database
[dependencies.crater-db]
path = "crater-db"

# Abstracts TaskCluster
[dependencies.crater-taskman]
path = "crater-taskman"

# Bindings to TaskCluster
[dependencies.taskcluster]
path = "taskcluster"

