[package]
name = "crater"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]

# The web server, serves API calls via JSON, possibly HTML, and
# possibly coordinates the job engine.
[[bin]]
name = "crater-web"
path = "crater-web/main.rs"

# The user interface
[[bin]]
name = "crater-cli"
path = "crater-cli/main.rs"

# Dependencies for the above two.
# FIXME: I'd rather not mix the deps for them so that crater-cli can
# be built without building iron.
[dependencies]
iron = "0.2.6"
hyper = "0.7.1"
router = "0.1.0"
mount = "0.0.9"
log = "0.3.2"
env_logger = "0.3.1"
rustc-serialize = "0.3.16"

# Coordinates builds into crater jobs
[dependencies.crater-engine]
path = "crater-engine"

# Abstracts the AMQP implementation
[dependencies.crater-bus]
path = "crater-bus"

# Abstracts the PostgreSQL database
[dependencies.crater-db]
path = "crater-db"

# Shared defs for the HTTP API
[dependencies.crater-api]
path = "crater-api"

# Bindings to TaskCluster
[dependencies.taskcluster]
path = "taskcluster"
